@@ -1,5 +1,10 @@
 2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>
 
+	* map.c: Continuing my ineptitude...  <sys/wait.h> isn't on Win32.
+	* mph.h: Win32 doesn't define EOVERFLOW, either.  Define it.
+
+2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>
+
 	* map.c: Include <config.h> so we can check for PLATFORM_WIN32.
 
 2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>
